--- a/Woodshed.dproj
+++ b/Woodshed.dproj
@@ -161,7 +161,7 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
-        <DCCReference Include="ContactBuildSelectString.pas"/>
+        <DCCReference Include="ContactReportsClass.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
